tests/union_error_deserialize.stderr
error: edn-derive does not support derive for unions
 --> $DIR/union_error_deserialize.rs:4:1
  |
4 | union BadType {
  | ^^^^^
